--- a/Authentication/src/main/resources/application.properties
+++ b/Authentication/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=Authentication
+server.port=8081
+
+# H2 database configuration
+spring.datasource.url=jdbc:h2:mem:moneydb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA config
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Enable H2 web console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
