--- a/Authentication/src/main/resources/application.properties
+++ b/Authentication/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Authentication
 server.port=8081
 
 # H2 database configuration
-spring.datasource.url=jdbc:h2:mem:moneydb
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
